# FabulaeTextile

./: .gitignore  CMakeLists.txt  README.md
doc/: design.md
example/: example1.xml  gan.xml  wang.xml
lib/: CMakeLists.txt
lib/include/: fabtex.hpp
lib/include/fabtex/: anchor.hpp  bitmap.hpp  character.hpp  data.hpp  node.hpp  path.hpp  radical.hpp  renderer.hpp  stroke.hpp  structure.hpp  vector.hpp
lib/src/: fabtex.cpp
lib/src/fabtex/: character.cpp  data.cpp  node.cpp  renderer.cpp  stroke.cpp
test/: CMakeLists.txt
test/bitmap/: CMakeLists.txt  bitmap_test.cpp
test/core/: CMakeLists.txt  core_test.cpp
test/path/: CMakeLists.txt  path_test.cpp
test/vector/: CMakeLists.txt  vector_test.cpp
tool/: CMakeLists.txt  utility.cpp  utility.hpp  visualizer.cpp  visualizer.hpp  widgets.cpp  widgets.hpp
tool/imgui/: CMakeLists.txt
tool/stb/: CMakeLists.txt  compile.c
